[package]
name = "warhorn-to-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = "0.4.0"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
